# maze-ascension

./: Cargo.toml  LICENSE  README.md  README.norg  justfile
.github/workflows/: ci.yaml  release.yaml
docs/: design.md  workflows.md
src/: asset_tracking.rs  audio.rs  camera.rs  constants.rs  dev_tools.rs  hex.rs  lib.rs  main.rs
src/dev_tools/: mod.rs  plugin.rs
src/dev_tools/ui/: inspector.rs  maze_controls.rs  mod.rs
src/floor/: components.rs  events.rs  mod.rs  resources.rs
src/floor/systems/: despawn.rs  fog.rs  hide.rs  mod.rs  movement.rs  spawn.rs
src/grid/: direction.rs  grid.rs  level.rs  mod.rs  tile.rs
src/hexgrid/: direction.rs  grid.rs  mod.rs  tile.rs
src/hint/: assets.rs  components.rs  mod.rs
src/hint/systems/: check.rs  mod.rs  setup.rs  spawn.rs
src/maze/: assets.rs  commands.rs  components.rs  coordinates.rs  errors.rs  events.rs  grid.rs  mod.rs  plugin.rs  prism.rs  resource.rs  resources.rs  tile.rs
src/maze/systems/: common.rs  despawn.rs  event_handler.rs  mod.rs  recreation.rs  respawn.rs  setup.rs  spawn.rs  toggle_pause.rs  toogle_pause.rs  update.rs
src/maze/triggers/: common.rs  despawn.rs  mod.rs  respawn.rs  spawn.rs
src/player/: assets.rs  commands.rs  components.rs  events.rs  mod.rs  systems.rs
src/player/systems/: ascend.rs  descend.rs  despawn.rs  event_handler.rs  input.rs  mod.rs  movement.rs  respawn.rs  setup.rs  sound_effect.rs  spawn.rs  toggle_pause.rs  vertical_transition.rs
src/player/triggers/: despawn.rs  mod.rs  respawn.rs  spawn.rs
src/screens/: credits.rs  gameplay.rs  loading.rs  mod.rs  pause.rs  splash.rs  title.rs
src/stats/: components.rs  container.rs  mod.rs  resources.rs
src/stats/systems/: common.rs  floor.rs  floor_timer.rs  mod.rs  reset.rs  score.rs  setup.rs  spawn.rs  total_timer.rs
src/theme/: assets.rs  colorscheme.rs  components.rs  events.rs  interaction.rs  mod.rs  widgets.rs
src/theme/palette/: mod.rs  rose_pine.rs
src/theme/systems/: button.rs  mod.rs
src/tiles/: level.rs  mod.rs  player.rs  tile.rs
web/: index.html  restart-audio-context.js
